# ShaderConductor

./: .appveyor.yml  .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  BuildAll.py  CMakeLists.txt  CONTRIBUTING.md  README.md  azure-pipelines.yml
.github/ISSUE_TEMPLATE/: bug_report.md
CI/AzurePipelines/: ContinuousBuild.yml
Include/ShaderConductor/: ShaderConductor.hpp
Source/: CMakeLists.txt
Source/Core/: CMakeLists.txt  ShaderConductor.cpp
Source/Tests/: CMakeLists.txt  Common.cpp  Common.hpp  CrossCompileTest.cpp  ReflectionTest.cpp  ShaderConductorTest.cpp
Source/Tests/Data/Expected/: CalcLight+Diffuse.Debug.dxilasm  CalcLight+Diffuse.Release.dxilasm  CalcLight+DiffuseSpecular.Debug.dxilasm  CalcLight+DiffuseSpecular.Release.dxilasm  Constant_PS.30.hlsl  Constant_PS.300.essl  Constant_PS.300.glsl  Constant_PS.310.essl  Constant_PS.410.glsl  Constant_PS.50.hlsl  Constant_PS.msl  Constant_VS.30.hlsl  Constant_VS.300.essl  Constant_VS.300.glsl  Constant_VS.310.essl  Constant_VS.410.glsl  Constant_VS.50.hlsl  Constant_VS.msl  DetailTessellation_HS.300.essl  DetailTessellation_HS.300.glsl  DetailTessellation_HS.310.essl  DetailTessellation_HS.410.glsl  DetailTessellation_HS.msl  DotHalfPS.glsl  Fluid_CS.300.glsl  Fluid_CS.310.essl  Fluid_CS.410.glsl  Fluid_CS.50.hlsl  Fluid_CS.msl  HalfOutParamPS.glsl  IncludeEmptyHeader.glsl  IncludeExist.glsl  PNTriangles_DS.300.essl  PNTriangles_DS.300.glsl  PNTriangles_DS.310.essl  PNTriangles_DS.410.glsl  PNTriangles_DS.msl  Particle_GS.300.essl  Particle_GS.300.glsl  Particle_GS.310.essl  (+31 more)
Source/Tests/Data/Input/: CalcLight.hlsl  CalcLightDiffuse.hlsl  CalcLightDiffuseSpecular.hlsl  Common.hlsli  Constant_PS.hlsl  Constant_VS.hlsl  DetailTessellation_HS.hlsl  FailedHalfDataType.hlsl  Fluid_CS.hlsl  HalfDataType.hlsl  IncludeEmptyHeader.hlsl  IncludeExist.hlsl  IncludeNotExist.hlsl  PNTriangles_DS.hlsl  Particle_GS.hlsl  PassThrough_PS.hlsl  PassThrough_VS.hlsl  ToneMapping_PS.hlsl  Transform_VS.hlsl
Source/Tests/Data/Input/Inc/: HeaderA.hlsli  HeaderB.hlsli
Source/Tests/Data/Result/: .gitignore
Source/Tools/: CMakeLists.txt  ShaderConductorCmd.cpp
Source/Wrapper/: CMakeLists.txt  Native.cpp  Native.h  Program.cs  Wrapper.cs  shader.hlsl
